@@ -1,5 +1,5 @@
 #!/bin/sh -x
-CLASSPATH=../craftbukkit-1.1-R8.jar:../SERVER/plugins/WorldGuard.jar javac *.java -Xlint:unchecked -Xlint:deprecation
+CLASSPATH=../craftbukkit-1.1-R8.jar:../SERVER/plugins-disabled/WorldGuard.jar javac *.java -Xlint:unchecked -Xlint:deprecation
 rm -rf me 
 mkdir -p me/exphc/SilkSpawners
 mv *.class me/exphc/SilkSpawners
